--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -236,6 +236,31 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin:20px;
 
       }
+      /* misc */
+      .bad{
+        color:#E53935;
+        --paper-progress-active-color:#E53935;
+        --paper-slider-active-color:#E53935;
+        --paper-slider-knob-color:#E53935;
+        --paper-slider-pin-color:#E53935;
+      }
+      .ok{
+        color:#F57C00;
+        --paper-progress-active-color:#F57C00;
+        --paper-slider-active-color:#F57C00;
+        --paper-slider-knob-color:#F57C00;
+        --paper-slider-pin-color:#F57C00;
+      }
+      .good{
+        color:#43A047;
+        --paper-progress-active-color:#43A047;
+        --paper-slider-active-color:#43A047;
+        --paper-slider-knob-color:#43A047;
+        --paper-slider-pin-color:#43A047;
+      }
+      .full{
+        @apply(--app-grid-expandible-item);
+      }
     </style>
   </template>
 </dom-module>
