--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -57,10 +57,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       background-color: inherit;
     }
     #suDrawer{
-      overflow:auto;
       text-align:left;
       --app-drawer-content-container:{
         background-color:#f2f2f2;
+        overflow-y:scroll;
       }
     }
 
@@ -252,7 +252,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color:#0e0e0e0e;
     }
     #searchDropdown{
-      margin-top:20px;
+      top:65px;
       width:100%;
       position:absolute;
       background-color:#FFF;
@@ -260,7 +260,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color:#000;
     }
     #notificationDropdown{
-      margin-top:20px;
+      top:65px;
       width:100%;
       position:absolute;
       background-color:#FFF;
@@ -268,7 +268,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color:#000;
     }
     #mobileSearchDropdown{
-      margin-top:20px;
+      top:65px;
       width:100%;
       position:absolute;
       background-color:#FFF;
@@ -276,7 +276,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color:#000;
     }
     #mobileNotificationDropdown{
-      margin-top:20px;
+      top:65px;
       width:100%;
       position:absolute;
       background-color:#FFF;
@@ -355,6 +355,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       margin-bottom:25px;
       border-bottom:1px solid #a0a0a0;
       display:inline-block;
+    }
+    #linkSelector a{
+      
     }
     </style>
   </template>
