--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -114,6 +114,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       /*responsive table styling */
       /*AKA: tableContainer*/
+      .gutter-table-5{
+        margin-left:3%;
+        margin-right:3%;
+      }
       .guuey-table{
         padding:20px;
         height:auto;
