--- a/src/my-app.html
+++ b/src/my-app.html
@@ -158,7 +158,7 @@
 
         <div class="divider"></div>
 
-        <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+        <iron-selector id="linkSelector" selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="su-profile" href="/[[home]]/care-plan/su-profile/[[param]]">Personal Profile<a>
           <a name="su-reports" href="/[[home]]/care-plan/su-reports/[[param]]">Daily Reports</a>
           <a name="su-pre" href="/[[home]]/care-plan/su-pre/[[param]]">Pre-Admission Assessment</a>
@@ -611,6 +611,7 @@
         var neonOffsetTop=this.$.neonPages.offsetTop;
         var screenHeight=window.innerHeight;
         var headerHeight=this.$.appHeader.offsetHeight;
+        console.log(headerHeight, screenHeight, neonOffsetTop);
         this.customStyle["--neon-pages-height"]=screenHeight-headerHeight+"px";
         if(this.page==="def-login"){
           this.customStyle["--login-overlay-display"]="inline-block";
