--- a/src/pages/admin/ad-reports/reports/quarterly-manager-report.html
+++ b/src/pages/admin/ad-reports/reports/quarterly-manager-report.html
@@ -49,7 +49,7 @@
         label2="Any comments regarding medication in general">
       </guuey-text-input>
 
-      <div class="guuey-table">
+      <div class="guuey-table gutter-table-5">
 
         <p class="tableScrollLabel">
           swipe left scrolls table
