--- a/src/pages/care-plan/su-reports/su-reports.html
+++ b/src/pages/care-plan/su-reports/su-reports.html
@@ -40,13 +40,20 @@
         color:#E53935;
       }
       .sliderOutput{
-        text-align:center;
-        font-size:120%;
-        margin:10px;
-        padding:10px;
+        text-align:left;
+        font-size:12px;
+        color:#757575;
       }
       h2{
         text-transform:capitalize;
+      }
+      #chunkSelector{
+        margin-left:20px;
+      }
+      .attrCardLabel{
+        font-size:16px;
+        text-transform:uppercase;
+        color:#757575;
       }
     </style>
 
@@ -76,11 +83,10 @@
 
         <div class="app-grid">
           <paper-card elevation="3" class="padded">
-            <div class="sliderRow">
-              <iron-icon id="iconBad" icon="icons:thumb-down"></iron-icon>
-              <paper-slider class$="[[_computeProgressColor(dailyRepData.mood)]]" pin value="{{dailyRepData.mood}}"></paper-slider>
-              <iron-icon id="iconGood" icon="icons:thumb-up"></iron-icon>
-            </div>
+            <p class="attrCardLabel">
+              mood
+            </p>
+
             <p hidden="[[!dailyRepData.mood]]" class="sliderOutput">
               [[suIndexData.fName]]'s overall mood was <b>[[dailyRepData.mood]]</b> out of 100 for this shift.
             </p>
@@ -88,21 +94,31 @@
               Please select a value out of 100 for [[suIndexData.fName]]'s overall mood.
             </p>
 
+            <div class="sliderRow">
+              <iron-icon id="iconBad" icon="icons:thumb-down"></iron-icon>
+              <paper-slider class$="[[_computeProgressColor(dailyRepData.mood)]]" pin value="{{dailyRepData.mood}}"></paper-slider>
+              <iron-icon id="iconGood" icon="icons:thumb-up"></iron-icon>
+            </div>
+
             <paper-textarea label="Comments on Mood" value="{{dailyRepData.moodComments}}"></paper-textarea>
           </paper-card>
 
           <paper-card elevation="3" class="padded">
-            <div class="sliderRow">
-              <iron-icon id="iconBad" icon="icons:thumb-down"></iron-icon>
-              <paper-slider class$="[[_computeProgressColor(dailyRepData.health)]]" pin value="{{dailyRepData.health}}"></paper-slider>
-              <iron-icon id="iconGood" icon="icons:thumb-up"></iron-icon>
-            </div>
+            <p class="attrCardLabel">
+              health
+            </p>
             <p hidden="[[!dailyRepData.health]]" class="sliderOutput">
               [[suIndexData.fName]]'s overall health was <b>[[dailyRepData.health]]</b> out of 100 for this shift.
             </p>
             <p hidden="[[dailyRepData.health]]" class="sliderOutput">
               Please select a value out of 100 for [[suIndexData.fName]]'s overall health.
             </p>
+
+            <div class="sliderRow">
+              <iron-icon id="iconBad" icon="icons:thumb-down"></iron-icon>
+              <paper-slider class$="[[_computeProgressColor(dailyRepData.health)]]" pin value="{{dailyRepData.health}}"></paper-slider>
+              <iron-icon id="iconGood" icon="icons:thumb-up"></iron-icon>
+            </div>
 
             <paper-textarea label="Comments on Health" value="{{dailyRepData.healthComments}}"></paper-textarea>
           </paper-card>
