--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -68,6 +68,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color:#000000 !important;
       opacity: .38 !important;
     }
+    .mobileToolbarButton{
+
+    }
+    .mobileToolbarButton:focus{
+      background-color:#303D95;
+      border-bottom:#e51561 5px solid;
+    }
     .leftToolbarButton{
       height:100%;
       padding-bottom:20px;
@@ -137,6 +144,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     .toolbarRight *{
       flex-grow:1;
     }
+    .mobileToolbarInner{
+      text-align:center;
+      display:flex;
+      flex-direction:row;
+      align-items:center;
+    }
     .toolbarInner{
       text-align:center;
       display:flex;
@@ -205,11 +218,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       display:var(--login-overlay-display);
     }
     .mainProgress{
+      position:fixed;
+      top:0;
+      left:0;
       width:100%;
       --paper-progress-indeterminate-cycle-duration: 15s;
-      --paper-progress-container-color: #3d4ba8;
-      --paper-progress-active-color:#3d4ba8;
+      --paper-progress-container-color: transparent;
+      --paper-progress-active-color: transparent;
       --paper-progress-active-color:var(--page-loading-active-color);
+
       display:inherit;
     }
     .searchInput{
@@ -338,9 +355,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       flex-direction:row;
     }
     #moduleType{
-      margin:15px 30px 0px 20px;
-      height:85px;
-      width:85px;
+      margin:10px 20px 0px 20px;
+      height:65px;
+      width:65px;
     }
     .moduleTypeLabel{
       margin-top:30px;
@@ -355,9 +372,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       margin-bottom:25px;
       border-bottom:1px solid #a0a0a0;
       display:inline-block;
-    }
-    #linkSelector a{
-      
     }
     </style>
   </template>
