--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -57,6 +57,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         border-bottom:1px solid #e0e0e0;
         display:inline-block;
       }
+      .half-page{
+        width:50%;
+      }
 
       /* fab styles*/
       #mainFab{
