--- a/src/behaviors/admin-resize-behavior.html
+++ b/src/behaviors/admin-resize-behavior.html
@@ -30,36 +30,37 @@
 
       };
       if(this.page==="ad-payment"){
-        //orig uses 600px
+        //table style
+        var tableScrollLabelColor="transparent";
+        //columns
         var appGridColumns="2";
-        var tableScrollLableColor="transparent";
-        var tableOverflow="unset";
-        var tbodyDisplay="table-row-group";
-        var theadTrPosition="unset";
-        var theadTrDisplay="table-row";
-        var theadTrTdWidth="unset";
-        var tdThMinWidth="unset";
-        var tdThLastWidth="unset";
+
         if(dimensions.base.query767){
-          appGridColumns="1";
-          tableScrollLableColor="inherit";
-          tableOverflow="scroll";
-          tbodyDisplay="block";
-          theadTrPosition="relative";
-          theadTrDisplay="block";
-          theadTrTdWidth="150px";
-          tdThMinWidth="150px";
-          tdThLastWidth="150px";
+          //table style
+          tableScrollLabelColor="inherit";
+          //columns
+          var appGridColumns="1";
+        } else if(dimensions.base.query1023){
+          //table style
+          tableScrollLabelColor="inherit";
+          //columns
+          var appGridColumns="1";
+        } else if(dimensions.base.query1365){
+          //table style
+          tableScrollLabelColor="inherit";
+          //columns
+          var appGridColumns="1";
+        } else if(dimensions.base.query1919){
+
+          //table style
+          tableScrollLabelColor="transparent";
+
+          //columns
+          var appGridColumns="2";
         };
-        this.customStyle["--app-grid-columns"]=appGridColumns;
-        this.customStyle["--table-scroll-lable-color"]=tableScrollLableColor;
-        this.customStyle["--table-overflow"]=tableOverflow;
-        this.customStyle["--tbody-display"]=tbodyDisplay;
-        this.customStyle["--thead-tr-position"]=theadTrPosition;
-        this.customStyle["--thead-tr-display"]=theadTrDisplay;
-        this.customStyle["--thead-tr-td-width"]=theadTrTdWidth;
-        this.customStyle["--td-th-min-width"]=tdThMinWidth;
-        this.customStyle["--td-th-last-width"]=tdThLastWidth;
+        this.customStyle["--table-scroll-lable-color"]=tableScrollLabelColor;
+        this.customStyle["--table-scroll-lable-color"]=tableScrollLabelColor;
+
         this.updateStyles();
       };
       if(this.page==="ad-profile"){
@@ -78,39 +79,55 @@
 
       };
       if(this.page==="ad-users"){
-        //orig uses 900px
-        var tableScrollLableColor="transparent";
-
+        //table style
+        var tableScrollLabelColor="transparent"
+        //fab styles
         var mainFabPosition="absolute";
         var mainFabTop="-25px";
         var mainFabBottom="unset";
         var mainFabRight="-25px";
-        if(dimensions.base.query1365){
-
+        if(dimensions.base.query767){
           //table style
-          tableScrollLableColor="inherit";
+          tableScrollLabelColor="inherit";
 
-          //fab style
+          //fab styles
           mainFabPosition="fixed";
           mainFabTop="unset";
           mainFabBottom="5%";
           mainFabRight="5%";
+        } else if(dimensions.base.query1023){
+          //table style
+          tableScrollLabelColor="inherit";
+          //fab styles
+          mainFabPosition="fixed";
+          mainFabTop="unset";
+          mainFabBottom="5%";
+          mainFabRight="5%";
+        } else if(dimensions.base.query1365){
+          //table style
+          tableScrollLabelColor="inherit";
+          //fab styles
+          var mainFabPosition="absolute";
+          var mainFabTop="-25px";
+          var mainFabBottom="unset";
+          var mainFabRight="-25px";
+        } else if(dimensions.base.query1919){
 
+          //table style
+          tableScrollLabelColor="transparent";
+
+          //fab styles
+          var mainFabPosition="absolute";
+          var mainFabTop="-25px";
+          var mainFabBottom="unset";
+          var mainFabRight="-25px";
         };
-        this.customStyle["--table-scroll-lable-color"]=tableScrollLableColor;
-        this.customStyle["--table-overflow"]=tableOverflow;
-        this.customStyle["--tbody-display"]=tbodyDisplay;
-        this.customStyle["--thead-tr-position"]=theadTrPosition;
-        this.customStyle["--thead-tr-display"]=theadTrDisplay;
-        this.customStyle["--thead-tr-td-width"]=theadTrTdWidth;
-        this.customStyle["--td-th-min-width"]=tdThMinWidth;
-        this.customStyle["--td-th-last-width"]=tdThLastWidth;
+        this.customStyle["--table-scroll-lable-color"]=tableScrollLabelColor;
 
         this.customStyle["--main-fab-position"]=mainFabPosition;
         this.customStyle["--main-fab-top"]=mainFabTop;
         this.customStyle["--main-fab-bottom"]=mainFabBottom;
         this.customStyle["--main-fab-right"]=mainFabRight;
-
         this.updateStyles();
       };
     },
