--- a/src/behaviors/su-resize-behavior.html
+++ b/src/behaviors/su-resize-behavior.html
@@ -202,34 +202,67 @@
           var tableScrollLabelColor="transparent"
 
           if(dimensions.base.query1365){
-            tableScrollLabelColor="inherit"
+            //table style
+            var tableScrollLabelColor="transparent"
 
-          };
-          this.customStyle["--table-scroll-lable-color"]=tableScrollLabelColor;
+          } else if(dimensions.base.query767){
+            //table style
+            tableScrollLabelColor="inherit";
 
-          this.updateStyles();
+          } else if(dimensions.base.query1023){
+            //table style
+            tableScrollLabelColor="inherit";
+
+          } else if(dimensions.base.query1365){
+            //table style
+            tableScrollLabelColor="inherit";
+
+          } else if(dimensions.base.query1919){
+
+              //table style
+              tableScrollLabelColor="transparent";
+
+            };
+            this.customStyle["--table-scroll-lable-color"]=tableScrollLabelColor;
+            this.updateStyles();
         };
         if(this.page==="su-medication"){
-          // 1000 and  640 px
+          //table style
           var tableScrollLabelColor="transparent"
-
+          //fab styles
           var mainFabPosition="absolute";
           var mainFabTop="-30px";
           var mainFabBottom="unset";
           var mainFabRight="5%";
           if(dimensions.base.query767){
             //table style
-            tableScrollLabelColor="inherit"
+            tableScrollLabelColor="inherit";
 
             //fab styles
             mainFabPosition="fixed";
             mainFabTop="unset";
             mainFabBottom="5%";
             mainFabRight="5%";
+          } else if(dimensions.base.query1023){
+            //table style
+            tableScrollLabelColor="inherit";
+            //fab styles
+            mainFabPosition="fixed";
+            mainFabTop="unset";
+            mainFabBottom="5%";
+            mainFabRight="5%";
+          } else if(dimensions.base.query1365){
+            //table style
+            tableScrollLabelColor="inherit";
+            //fab styles
+            mainFabPosition="absolute";
+            mainFabTop="-30px";
+            mainFabBottom="unset";
+            mainFabRight="5%";
           } else if(dimensions.base.query1919){
 
             //table style
-            tableScrollLabelColor="inherit"
+            tableScrollLabelColor="transparent";
 
             //fab styles
             mainFabPosition="absolute";
